--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,9 @@
 sudo: false
 language: java
 mvn: mvn2
-script: cd scheme ; mvn install
+script: 
+  - cd maven-plugin ; mvn install
+  - cd scheme ; mvn install
 jdk:
   - oraclejdk8
 notifications:
